--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Inicio</title>
 </head>
@@ -26,28 +28,65 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="container text-center">
         <h2>Abierto todos los dias,horario de corrido</h2>
-        </nav>
-        <p class="caja">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi vel velit fugit odit eveniet
-            voluptas vero
-            numquam ab tenetur dolorum aliquam blanditiis itaque magni reiciendis id doloremque, repellat a assumenda
-            temporibus nesciunt. Voluptatem a, aliquam quidem quos ipsam voluptates id debitis, magni aut sit delectus
-            illum
-            qui nemo, quia facere facilis odit sapiente ab provident minima quaerat reprehenderit. Ipsum voluptas nisi
-            pariatur sequi rerum officia dolore sint asperiores tempora laudantium repellat, qui adipisci quibusdam quia
-            modi error porro quas fugit eos aliquid natus facere distinctio omnis! Laboriosam ipsa rem aperiam dolores
-            dolore ad, minus quisquam esse quibusdam, velit possimus odio.</p>
-        <p class="caja">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum praesentium repudiandae reiciendis
-            sit? Fugiat,
-            deleniti recusandae tenetur nisi consequatur minus tempore nemo cumque, doloribus distinctio ipsam similique
-            error. Ex nobis autem ab quod reiciendis quam harum! Aliquid nobis modi harum corrupti neque autem officiis,
-            sint nesciunt numquam itaque deserunt. Laudantium fugit minus excepturi alias perspiciatis consequatur
-            eligendi vero ratione velit repellat ipsa similique aperiam quisquam laboriosam, hic tenetur accusantium
-            iste! Expedita aliquid commodi quasi voluptatum dolorem repellat sequi pariatur quia rerum veritatis iusto
-            molestias doloremque, architecto odio, asperiores, ea earum distinctio at similique provident nam harum
-            tenetur? Repudiandae, animi esse!
-        </p>
+        <section class="row gap-2 justify-content-center">
+            <div class=" col-md-4 col-sm-4">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col"></th>
+                            <th scope="col">Lunes</th>
+                            <th scope="col">Martes</th>
+                            <th scope="col">Miercoles</th>
+                            <th scope="col">Jueves</th>
+                            <th scope="col">Viernes</th>
+                            <th scope="col">Sábado</th>
+                            <th scope="col">Domingo</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">Horario</th>
+                            <td>9:00 a 00:00</td>
+                            <td>9:00 a 00:00</td>
+                            <td>9:00 a 00:00</td>
+                            <td>9:00 a 00:00</td>
+                            <td>9:00 a 00:00</td>
+                            <td>9:00 a 00:00</td>
+                            <td>9:00 a 00:00</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="col-md-4 col-sm-3">
+                <p class="caja">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi vel velit fugit odit
+                    eveniet
+                    voluptas vero
+                    numquam ab tenetur dolorum aliquam blanditiis itaque magni reiciendis id doloremque, repellat a
+                    assumenda
+                    temporibus nesciunt. Voluptatem a, aliquam quidem quos ipsam voluptates id debitis, magni aut sit
+                    delectus
+                    illum
+                </p>
+            </div>
+            <div class="col-md-4 col-sm-3">
+                <p class="caja">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum praesentium repudiandae
+                    reiciendis
+                    sit? Fugiat,
+                    deleniti recusandae tenetur nisi consequatur minus tempore nemo cumque, doloribus distinctio ipsam
+                    similique
+                    error. Ex nobis autem ab quod reiciendis quam harum! Aliquid nobis modi harum corrupti neque autem
+                    officiis,
+                    sint nesciunt numquam itaque deserunt. Laudantium fugit minus excepturi alias perspiciatis
+                    consequatur
+                    eligendi vero ratione velit repellat ipsa similique aperiam quisquam laboriosam, hic tenetur
+                    accusantium
+                    iste!
+                </p>
+            </div>
+        </section>
         <div class="map">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3377.7073857059263!2d-58.40628!3d-32.1581943!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b1d9011381bed1%3A0x4b8520da35bfc55d!2sSupermercado%20Urquiza%20LO%20VELZI!5e0!3m2!1ses-419!2sar!4v1683396429938!5m2!1ses-419!2sar"
@@ -66,6 +105,9 @@
         </div>
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
