--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
@@ -53,15 +55,6 @@
                     iure
                     asperiores? Quibusdam, assumenda voluptates, fugit magni quam ex impedit provident rem ipsa eligendi
                     odio
-                    itaque asperiores! Nulla accusamus quibusdam sit doloremque repudiandae debitis quisquam
-                    exercitationem.
-                    Voluptatibus ad velit explicabo vel optio, consequuntur non eaque distinctio molestiae voluptates,
-                    nihil
-                    rerum quasi nulla dolore odit excepturi, quis perspiciatis mollitia repudiandae modi error! Delectus
-                    eum
-                    dignissimos quisquam voluptas debitis nemo, commodi quia deserunt ducimus tempore perspiciatis
-                    corporis,
-                    vero adipisci animi itaque quaerat facere doloremque sint nihil, dolor quis? Ratione quisquam
                 </p>
             </div>
             <div class="grilla__hijo g6">
@@ -73,25 +66,15 @@
                     ea
                     dolores adipisci culpa! Amet dolorum reprehenderit, sed nihil corporis porro aspernatur laborum
                     numquam
-                    error odio minus quidem beatae. Similique autem corrupti ratione quasi enim, porro laborum? Aliquid
-                    assumenda illo molestiae non libero praesentium aperiam accusantium nisi asperiores necessitatibus
-                    quisquam
-                    ab deleniti sunt dolore vel sint labore fuga animi modi quia, fugiat tempora tenetur unde optio? Est
-                    enim,
-                    unde officiis dolore aspernatur necessitatibus quaerat maiores iusto impedit id sequi vitae
-                    asperiores
-                    itaque quos veniam fugit illo modi eligendi! Voluptate corrupti debitis, optio sapiente consectetur
-                    provident et fugit minus temporibus a esse ex autem tempora illum, perferendis nisi laboriosam!
-                    Eligendi
-                    facilis eos reiciendis nihil ex distinctio fugiat quod nisi repellendus.</p>
+                </p>
             </div>
-        </section>
-        <a href="">
-            <img src="../images/whatsapp.jpg" alt="" class="wsp">
-        </a> 
+            <section>
+                <a href="">
+                    <img src="../images/whatsapp.jpg" alt="" class="wsp">
+                </a>
 
 
-        </section>
+            </section>
     </main>
 
     <footer class="pie">
@@ -99,7 +82,9 @@
 
         Copyright by William Velzi since 2023
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
