--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
@@ -29,21 +31,30 @@
     <main>
         <h2 class="caja2">¿Quienes somos?</h2>
 
-        <p class="caja">Somos una empresa familiar con mas de 10 años de antiguedad, la misma se caracteriza por estar
-            abiertos los
-            365 dias del año.
-            Nuestro local es atendido por sus dueños, se destaca por el amplio horario de atencion y su gran variedad de
-            productos. </p>
-        <p class="caja">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptate beatae accusantium quod cumque,
-            facere ex, aliquam repudiandae eveniet rerum atque. Quaerat error totam illo ipsa, animi ipsum repudiandae
-            quam sunt tenetur ullam delectus aspernatur nihil, autem ipsam beatae exercitationem ab amet laborum
-            recusandae libero. Voluptatum quo praesentium sint omnis fugit consequuntur, quibusdam quos incidunt officia
-            veniam facilis quis dolores itaque debitis facere velit eveniet nesciunt culpa dicta asperiores, esse autem
-            totam maxime sunt? Fuga cum nesciunt doloribus recusandae exercitationem ad quibusdam. Illum repellendus
-            harum in deleniti inventore molestias. Voluptate aliquam est nisi, qui earum optio nihil nesciunt velit.
-            Consequuntur!
-        </p>
+        <div class="card" style="width: 18rem;">
+            <img src="../images/heladera.avif" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Visitanos</h5>
+                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores
+                    necessitatibus, reprehenderit odio magnam sequi, cumque voluptate sed nulla nisi vero laboriosam id
+                    accusamus eius dolor, dolores aliquid commodi doloribus. Minima vel ipsum assumenda alias in vitae
+                    tenetur est veniam ea, sapiente aut itaque voluptatibus laudantium quasi doloremque aliquam et
+                    delectus.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="../images/pgi3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Nos identificamos por:</h5>
+                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores
+                    necessitatibus, reprehenderit odio magnam sequi, cumque voluptate sed nulla nisi vero laboriosam id
+                    accusamus eius dolor, dolores aliquid commodi doloribus. Minima vel ipsum assumenda alias in vitae
+                    tenetur est veniam ea, sapiente aut itaque voluptatibus laudantium quasi doloremque aliquam et
+                    delectus.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
 
         <a href="">
             <img src="../images/whatsapp.jpg" alt="" class="wsp">
@@ -56,6 +67,9 @@
 
         Copyright by William Velzi since 2023
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
