--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
@@ -28,63 +30,51 @@
     </header>
     <main>
         <h2 class="caja2">En nuestro local podras encontrar una amplia variedad de productos como:</h2>
-        <section class="cajita">
+        <div id="carouselExampleFade" class="carousel slide carousel-fade">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../images/bebidas.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="../images/fiambres.avif" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="../images/frutas y verduras.avif" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="../images/heladera.avif" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="../images/vino.jpg" class="d-block w-100" alt="...">
+                </div>
+
             </div>
-            <div class="cajita__hijo c1">
-                <img src="../images/vino.jpg" alt="">
-            </div>
-            <div class="cajita__hijo c2">
-                <img src="../images/bebidas.jpg" alt="">
-            </div>
-            <div class="cajita__hijo c3">
-                <img src="../images/fiambres.avif" alt="">
-            </div>
-            <div class="cajita__hijo c4">
-                <img src="../images/frutas y verduras.avif" alt="">
-            </div>
-            <div class="cajita__hijo c5">
-                <img src="../images/heladera.avif" alt="">
-            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <p class="loremprod">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis deserunt odio odit
+            pariatur illum ea alias,
+            molestias magnam, molestiae quia libero vitae, qui ipsum. Neque a maiores consequuntur enim eum
+            molestias
+            iure temporibus, eveniet ducimus doloribus debitis quisquam! Labore debitis ea id quasi voluptatem
+            dolorum.
+            Iure sapiente necessitatibus illo praesentium sint vel? Ipsam aut aspernatur, maxime excepturi ipsa eos
+            at
+           </p>
 
 
-            <p class="loremprod">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis deserunt odio odit
-                pariatur illum ea alias,
-                molestias magnam, molestiae quia libero vitae, qui ipsum. Neque a maiores consequuntur enim eum
-                molestias
-                iure temporibus, eveniet ducimus doloribus debitis quisquam! Labore debitis ea id quasi voluptatem
-                dolorum.
-                Iure sapiente necessitatibus illo praesentium sint vel? Ipsam aut aspernatur, maxime excepturi ipsa eos
-                at
-                saepe quibusdam natus accusantium inventore velit omnis eius molestias quae unde culpa, recusandae quis
-                ratione asperiores? Quod est perspiciatis suscipit, asperiores sint eum expedita beatae minima quidem,
-                consequuntur earum vero debitis? Saepe labore suscipit sit aperiam libero quasi cupiditate culpa
-                voluptate,
-                minus dolorum enim dolore odit ullam omnis totam reiciendis amet, officia dignissimos excepturi nobis
-                alias
-                quia doloribus. Officiis nihil reprehenderit quis cum nulla rerum quia id tempora, cumque esse ullam
-                dolore
-                vel amet voluptatum nemo quos dignissimos quibusdam! Quae magnam delectus sequi id quam? Commodi, alias.
-                Temporibus quo molestiae ex perferendis deserunt. Adipisci porro tempore doloribus dolorum asperiores
-                maiores, deleniti explicabo, dolore laudantium animi aspernatur odit voluptatem numquam, magnam
-                praesentium
-                modi. Iste ratione sint fugit quis recusandae sequi, aliquid temporibus minima a consequatur facere
-                obcaecati, fuga ad? Consequuntur ipsam esse eos quasi ipsum laudantium, optio, iure ea nihil, quae ad
-                ratione praesentium odit aliquid quam quidem ex facere. Rem placeat necessitatibus eaque quos alias ad
-                nihil
-                perspiciatis dolores dolore animi optio consequuntur quasi, atque perferendis itaque laboriosam laborum.
-                Quod, facilis minus officia placeat aspernatur ipsum veniam eos? Fuga, tempore. Odio, dicta culpa. Quae
-                provident maxime vel eos quibusdam tenetur doloremque. Asperiores exercitationem doloremque dolorem
-                necessitatibus molestias cumque, praesentium illum excepturi recusandae rem aspernatur sequi!
-                Voluptatibus
-                eveniet ratione odio, doloribus voluptatum fugiat eum, tenetur voluptate velit ad praesentium. Iusto
-                amet
-                hic quasi unde autem. Assumenda reiciendis, alias quis corporis saepe provident asperiores dolorum omnis
-                quos maiores. Quas, labore. Ab, eveniet!</p>
-
-
-                 <a href="">
-                <img src="../images/whatsapp.jpg" alt="" class="wsp">
-            </a> 
+        <a href="">
+            <img src="../images/whatsapp.jpg" alt="" class="wsp">
+        </a>
 
     </main>
     <footer class="pie">
@@ -92,6 +82,9 @@
 
         Copyright by William Velzi since 2023
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
