--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
@@ -43,38 +45,43 @@
             molestiae similique omnis maiores veritatis maxime vero autem, nesciunt rem culpa tenetur impedit debitis
             voluptas inventore laborum distinctio eveniet. Iure mollitia aut sint facere odit illum amet? Eligendi quo,
             voluptates minus perferendis debitis quidem perspiciatis?</p>
-        <form action="" method="post" enctype="text/plain">
-            <div>
-                <label for="firstname">Nombre:</label>
-                <input type="text" placeholder="Nombre completo" name="firstname">
-            </div>
-            <div>
-                <label for="email">Email:</label>
-                <input type="email" placeholder="Ingrese su email" name="email">
-            </div>
-            <div>
-                <label for="consulta">Consulta</label>
-                <textarea name="Consulta" id="" cols="30" rows="10" placeholder="Escriba su consulta"></textarea>
-            </div>
-            <div>
-                <input type="submit" value="Enviar">
-                <input type="reset" value="Borrar">
-            </div>
 
-        </form>
-        <a href="">
-            <img src="../images/whatsapp.jpg" alt="" class="wsp">
-        </a>
+        <section class="form">
+            <form action="" method="post" enctype="text/plain">
+                <div>
+                    <label for="firstname">Nombre:</label>
+                    <input type="text" placeholder="Nombre completo" name="firstname">
+                </div>
+                <div>
+                    <label for="email">Email:</label>
+                    <input type="email" placeholder="Ingrese su email" name="email">
+                </div>
+                <div>
+                    <label for="consulta">Consulta</label>
+                    <textarea name="Consulta" id="" cols="30" rows="10" placeholder="Escriba su consulta"></textarea>
+                </div>
+                <div>
+                    <input type="submit" value="Enviar">
+                    <input type="reset" value="Borrar">
+                </div>
 
+            </form>
+            <a href="">
+                <img src="../images/whatsapp.jpg" alt="" class="wsp">
+            </a>
+        </section>
     </main>
 
     <footer class="pie">
         <p>¿Saliste tarde de trabajar?, no te preocupes,¡LO VELZI esta abierto!</p>
 
-    
+
         Copyright by William Velzi since 2023
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
