--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Inicio</title>
 </head>
@@ -30,62 +31,56 @@
     </header>
     <main class="container text-center">
         <h2>Abierto todos los dias,horario de corrido</h2>
-        <section class="row gap-2 justify-content-center">
-            <div class=" col-md-4 col-sm-4">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col"></th>
-                            <th scope="col">Lunes</th>
-                            <th scope="col">Martes</th>
-                            <th scope="col">Miercoles</th>
-                            <th scope="col">Jueves</th>
-                            <th scope="col">Viernes</th>
-                            <th scope="col">Sábado</th>
-                            <th scope="col">Domingo</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">Horario</th>
-                            <td>9:00 a 00:00</td>
-                            <td>9:00 a 00:00</td>
-                            <td>9:00 a 00:00</td>
-                            <td>9:00 a 00:00</td>
-                            <td>9:00 a 00:00</td>
-                            <td>9:00 a 00:00</td>
-                            <td>9:00 a 00:00</td>
-                        </tr>
-                    </tbody>
-                </table>
+        <section class="table">
+            <table >
+                <thead>
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col">Lunes</th>
+                        <th scope="col">Martes</th>
+                        <th scope="col">Miercoles</th>
+                        <th scope="col">Jueves</th>
+                        <th scope="col">Viernes</th>
+                        <th scope="col">Sábado</th>
+                        <th scope="col">Domingo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Horario</th>
+                        <td>9:00 a 00:00</td>
+                        <td>9:00 a 00:00</td>
+                        <td>9:00 a 00:00</td>
+                        <td>9:00 a 00:00</td>
+                        <td>9:00 a 00:00</td>
+                        <td>9:00 a 00:00</td>
+                        <td>9:00 a 00:00</td>
+                    </tr>
+                </tbody>
+            </table>
             </div>
+        </section>
+        <p class="caja">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi vel velit fugit odit
+            eveniet
+            voluptas vero
+            numquam ab tenetur dolorum aliquam blanditiis itaque magni reiciendis id doloremque, repellat a
+            assumenda
+            temporibus nesciunt. Voluptatem a, aliquam quidem quos ipsam voluptates id debitis, magni aut
+            sit
+            delectus
+            illum
+        </p>
 
-            <div class="col-md-4 col-sm-3">
-                <p class="caja">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi vel velit fugit odit
-                    eveniet
-                    voluptas vero
-                    numquam ab tenetur dolorum aliquam blanditiis itaque magni reiciendis id doloremque, repellat a
-                    assumenda
-                    temporibus nesciunt. Voluptatem a, aliquam quidem quos ipsam voluptates id debitis, magni aut sit
-                    delectus
-                    illum
-                </p>
-            </div>
-            <div class="col-md-4 col-sm-3">
-                <p class="caja">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum praesentium repudiandae
-                    reiciendis
-                    sit? Fugiat,
-                    deleniti recusandae tenetur nisi consequatur minus tempore nemo cumque, doloribus distinctio ipsam
-                    similique
-                    error. Ex nobis autem ab quod reiciendis quam harum! Aliquid nobis modi harum corrupti neque autem
-                    officiis,
-                    sint nesciunt numquam itaque deserunt. Laudantium fugit minus excepturi alias perspiciatis
-                    consequatur
-                    eligendi vero ratione velit repellat ipsa similique aperiam quisquam laboriosam, hic tenetur
-                    accusantium
-                    iste!
-                </p>
-            </div>
+        <p class="caja">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum praesentium
+            repudiandae
+            reiciendis
+            sit? Fugiat,
+            deleniti recusandae tenetur nisi consequatur minus tempore nemo cumque, doloribus distinctio
+            ipsam
+            similique
+            error. Ex nobis autem ab quod reiciendis quam harum! Aliquid nobis modi harum corrupti neque
+            autem
+        </p>
         </section>
         <div class="map">
             <iframe
@@ -102,8 +97,9 @@
         <div class="pie">
             <p>¿Saliste tarde de trabajar?, no te preocupes,¡LO VELZI esta abierto!</p>
             <p>Copyright by William Velzi since 2023</p>
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-instagram"></i>
         </div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
