--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
@@ -72,11 +73,13 @@
         </section>
     </main>
 
-    <footer class="pie">
-        <p>¿Saliste tarde de trabajar?, no te preocupes,¡LO VELZI esta abierto!</p>
-
-
-        Copyright by William Velzi since 2023
+    <footer>
+        <div class="pie">
+            <p>¿Saliste tarde de trabajar?, no te preocupes,¡LO VELZI esta abierto!</p>
+            <p>Copyright by William Velzi since 2023</p>
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-instagram"></i>
+        </div>
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
