--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -37,29 +37,20 @@
             <img src="../images/heladera.avif" class="card-img-top" alt="...">
 
             <h5 class="card-title">Visitanos</h5>
-            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores
-                necessitatibus, reprehenderit odio magnam sequi, cumque voluptate sed nulla nisi vero laboriosam
-                id
-                accusamus eius dolor, dolores aliquid commodi doloribus. Minima vel ipsum assumenda alias in
-                vitae
-                tenetur est veniam ea, sapiente aut itaque voluptatibus laudantium quasi doloremque aliquam et
-                delectus.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-
+            <p class="card-text">Nos encontramos en la ciudad de Villa Elisa, Entre Rios. Estamos sobre la avenida
+                principal a 4km del complejo termal.
+                Nuestro local ofrece una amplia variedad de productos y un amplio horario de atencion.
+            </p>
         </div>
         <div class="card-body" style="width: 18rem;">
             <img src="../images/pgi3.jpg" class="card-img-top" alt="...">
 
             <h5 class="card-title">Nos identificamos por:</h5>
-            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores
-                necessitatibus, reprehenderit odio magnam sequi, cumque voluptate sed nulla nisi vero laboriosam
-                id
-                accusamus eius dolor, dolores aliquid commodi doloribus. Minima vel ipsum assumenda alias in
-                vitae
-                tenetur est veniam ea, sapiente aut itaque voluptatibus laudantium quasi doloremque aliquam et
-                delectus.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <p class="card-text">Somos una empresa familiar, la cual se destaca por su amplio horario de trabajo y su
+                atecion.
+                Estamos abiertos todos los dias (incluyendo domingos y feriados).
 
+            </p>
         </div>
 
 
