--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -31,21 +31,11 @@
     </header>
     <main>
         <h2 class="caja2">Contactate con nosotros</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, doloremque dolores facere accusantium omnis,
-            repellendus numquam laborum voluptatum quidem culpa reprehenderit neque, soluta nobis! Rerum autem numquam
-            quidem facilis vitae dolorem voluptate, ex rem accusantium unde sint sed. Consequuntur expedita vitae ullam
-            libero unde nulla modi ratione, quidem pariatur soluta vel alias, numquam aliquid rerum corporis maiores?
-            Voluptatibus, eveniet nesciunt. Minus provident esse, dicta eos enim aliquam perferendis veniam tempora
-            dolore rerum, quidem dignissimos corrupti praesentium sapiente sed voluptates distinctio, possimus
-            blanditiis minima iure atque. Eum molestiae veniam ea eligendi consequuntur excepturi! Iure rem
-            reprehenderit impedit cupiditate tempora alias illum explicabo expedita reiciendis provident fuga corporis
-            natus, autem, nisi veritatis quisquam ut, animi non saepe corrupti neque enim vero. Animi incidunt harum hic
-            ipsum, illo nulla nisi id itaque expedita odit nesciunt sunt alias, error quod culpa. Vel aperiam aliquid
-            exercitationem corporis, pariatur in, reiciendis quis officia voluptate alias vero tempora consequuntur
-            error porro, magnam obcaecati veniam tenetur repellendus? Fugiat repudiandae iusto quam numquam, velit
-            molestiae similique omnis maiores veritatis maxime vero autem, nesciunt rem culpa tenetur impedit debitis
-            voluptas inventore laborum distinctio eveniet. Iure mollitia aut sint facere odit illum amet? Eligendi quo,
-            voluptates minus perferendis debitis quidem perspiciatis?</p>
+        <p>Si tenes alguna duda acerca de los productos que se venden en nuestro local podras contactarte con nosotros
+            rellenando el formulario, via redes sociales o  simplemente accediedo al whatsapp.
+
+            Desde ya agradecemos que nos tengas en cuenta para tu visita a nuestra ciudad.
+        </p>
 
         <section class="form">
             <form action="" method="post" enctype="text/plain">
